--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "@giscus/react": "^2.2.8"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.0"
+    "@docusaurus/module-type-aliases": "2.3.0",
+    "@docusaurus/plugin-content-docs": "^2.3.1"
   },
   "browserslist": {
     "production": [
