--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@giscus/react": "^2.2.8",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "mitt": "^3.0.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
